# BigFishAlert

./: .env.local.example  .gitignore  Anchor.toml  CONTRIBUTING.md  DEGEN_MODE_IMPLEMENTATION.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  README.md  TESTING_REAL_DATA.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/ai-explain/: route.ts
app/api/ai-predict-whale/: route.ts
app/api/big-fish-feed/: route.ts
app/api/scan-ocean/: route.ts
app/api/scan-token/: route.ts
components/: AITradingConsensus.tsx  AIWhalePrediction.tsx  BigFishFeed.tsx  ThemeToggle.tsx  TokenScanner.tsx  WalletProvider.tsx
components/degen/: LiveTicker.tsx  RiskSpeedometer.tsx  SocialProof.tsx
components/ui/: button.tsx
docs/: AI_FEATURE_SUMMARY.md  ANCHOR_DEPLOYMENT_GUIDE.md  HOW_TO_USE_DEGEN_MODE.md  PROGRESS_REPORT.md  SETUP_API_KEYS.md  SETUP_GUIDE.md
lib/: utils.ts
lib/api/: dexscreener.ts  helius.ts  rugcheck.ts
lib/contexts/: ThemeContext.tsx
lib/hooks/: useFisherProfile.ts
lib/i18n/: degenSpeak.ts  translations.ts
lib/scoring/: bigFishAlgorithm.ts
lib/solana/: config.ts  types.ts
lib/styles/: degenTheme.ts
programs/bigfishalert/: Cargo.toml
programs/bigfishalert/src/: lib.rs
scripts/: test-scanner.ts
