[package]
name = "bigfishalert"
version = "0.1.0"
description = "Fisher Reputation System for BigFishAlert"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bigfishalert"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
anchor-client = "0.29.0"
